# phonotry

./: .gitignore  CMakeLists.txt  Conf.cpp  Conf.h  Letter.cpp  Letter.h  Makefile  Phonotext.cpp  Phonotext.h  Proccessing.cpp  Proccessing.h  in.txt  out.txt  outJson.json  phonotry.cpp  phonotry.sln  phonotry.vcxproj  phonotry.vcxproj.filters  questions.txt
engine/: conf.cpp  proccessing.cpp  proccessing.h
lng json/: english.json  russian.json
